[package]
name = "opal"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
eframe = "0.32.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
dirs = "6.0.0"
env_logger = "0.11.8"
rfd = "0.15.4"
sysinfo = "0.37.0"
steam_shortcuts_util = "1.1.8"
steamlocate = "2.0.1"
winres = "0.1"
log = "0.4.27"
directories = "6.0.0"
image = "0.25.6"