[package]
name = "opal"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
eframe = { version = "0.32.1", features = ["persistence"] }
serde = { version = "1.0.219", features = ["derive"] }
egui_extras = { version = "0.32.1", features = ["all_loaders"] }
image = { version = "0.25.8", features = ["jpeg", "png"] }
serde_json = "1.0.143"
dirs = "6.0.0"
env_logger = "0.11.8"
rfd = "0.15.4"
sysinfo = "0.37.0"
steam_shortcuts_util = "1.1.8"
steamlocate = "2.0.1"
winres = "0.1"
log = "0.4.28"
directories = "6.0.0"